syntax = "proto3";

message LeaseProto {
	string tm = 1;
	repeated string keys = 2;
	int32 LeaseId = 3;
	//int32 lease_request_id = 3; 
}
message LeaseRequest {
	string id = 1;
	repeated string keys = 2;
	int32 leaseId = 3;
}
message ConfirmLeaseRequest {
	string id = 1;
	int32 leaseId = 2;
	bool ack = 3;
}

message LeaseReply {
	bool ack = 1;
}
message LeaseBroadCastRequest {
	int32 epoch = 1;
	repeated LeaseProto leases = 2;
}

service LeaseService {
	rpc Lease (LeaseRequest) returns (LeaseReply);
	rpc LeaseBroadCast (LeaseBroadCastRequest) returns (LeaseReply);
	rpc ConfirmLease (ConfirmLeaseRequest) returns (LeaseReply);
}